deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - image: app-image
        name: app
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
      imagePullSecrets:
      - name: regcred
