deploy/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
  labels:
    app: app
spec:
  rules:
  - host: app.app.svc.cluster.local
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8080
